WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238089
[iOS 15.4] Fix unused variables
https://bugs.webkit.org/show_bug.cgi?id=238089
Summary
[iOS 15.4] Fix unused variables
Jonathan Bedard
Reported
2022-03-18 12:17:49 PDT
We have a few unused variables which are getting flagged when compiling against 15.4.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-03-18 12:18:02 PDT
<
rdar://problem/90498642
>
Jonathan Bedard
Comment 2
2022-03-18 12:31:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/212
Jonathan Bedard
Comment 3
2022-03-18 16:12:37 PDT
Landed
https://commits.webkit.org/248613@main
(
r291501
)!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug