[iOS 15.4] Fix unused variables https://bugs.webkit.org/show_bug.cgi?id=238089 <rdar://problem/90498642 >

Reviewed by Alexey Proskuryakov and Chris Dumez.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess): Declare isSafari as unused for Mac and Catalyst.
* Source/WebKit/UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
(-[WKScrollingNodeScrollViewDelegate scrollViewWillEndDragging:withVelocity:targetContentOffset:]):
Remove canPanX and canPanY, since they are unused.
* Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant _createSheetWithElementActions:defaultTitle:showLinkTitle:]): Remove titleIsURL.
* Source/WebKitLegacy/mac/WebCoreSupport/WebChromeClient.mm:
(WebChromeClient::addMessageToConsole): Declare respondsToNewSelector as unused on iOS family.
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::visiblePositionForPoint const): frameView is only used on Mac.
* Source/WebCore/editing/cocoa/HTMLConverter.mm:
(HTMLConverter::_addAttachmentForElement): Declare ignoreOrientation as unused on iOS family.
* Source/WebCore/platform/audio/ios/AudioOutputUnitAdaptorIOS.cpp:
(WebCore::AudioOutputUnitAdaptor::configure): Assert that result is unused.
* Source/WebCore/platform/graphics/coretext/FontCascadeCoreText.cpp:
(WebCore::FontCascade::drawGlyphs): Declare shouldSmoothFonts as unused on iOS family.


Canonical link: https://commits.webkit.org/248613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291501 268f45cc-cd09-0410-ab3c-d52691b4dbfc